# schema-drift

./: .gitignore  pyproject.toml
schema_drift/: baseline.py  cli.py  detector.py  linter.py  parser.py  reporter.py
schema_drift/commands/: __init__.py  baseline_cmd.py  compare_cmd.py  diff_cmd.py  export_cmd.py  history_cmd.py  lint_cmd.py  register.py  search_cmd.py  summary_cmd.py  validate_cmd.py
tests/: test_baseline.py  test_baseline_cmd.py  test_cli.py  test_compare_cmd.py  test_detector.py  test_export_cmd.py  test_history_cmd.py  test_lint_cmd.py  test_linter.py  test_reporter.py  test_search_cmd.py  test_summary_cmd.py  test_validate_cmd.py
