[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "schema-drift"
version = "0.1.0"
description = "Detects and reports breaking schema changes between database migrations in CI workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["schema", "migration", "ci", "database", "drift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
schema-drift = "schema_drift.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["schema_drift"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
